// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsSupport <EsSupport /> 1`] = `
"<div class="d-flex support-holder align-items-center">
  <div class="image-holder mr-100"><a target="_blank" aria-label="Help" href="https://www.google.com/"><img src="https://via.placeholder.com/200x100" alt="Help Image" width="64" height="64" class="image image-bg-warm"></a></div>
  <div class="text-holder d-flex flex-column">
    <div class="title">
      <div class="h5 mb-25 font-size-base font-weight-bold">
        Need help signing up?
      </div>
    </div>
    <div class="link"><a target="_blank" href="https://www.google.com/" class="supportLink">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport <EsSupport variant="cool" /> 1`] = `
"<div class="d-flex support-holder align-items-center">
  <div class="image-holder mr-100"><a target="_blank" aria-label="Help" href="https://www.google.com/"><img src="https://via.placeholder.com/200x100" alt="Help Image" width="64" height="64" class="image image-bg-cool"></a></div>
  <div class="text-holder d-flex flex-column">
    <div class="title">
      <div class="h5 mb-25 font-size-base font-weight-bold">
        Need help signing up?
      </div>
    </div>
    <div class="link"><a target="_blank" href="https://www.google.com/" class="supportLink">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport Image exists 1`] = `
"<div class="d-flex support-holder align-items-center">
  <div class="image-holder mr-100"><a target="_blank" aria-label="Help" href="https://www.google.com/"><img src="https://via.placeholder.com/200x100" alt="Help Image" width="64" height="64" class="image image-bg-warm"></a></div>
  <div class="text-holder d-flex flex-column">
    <div class="title">
      <div class="h5 mb-25 font-size-base font-weight-bold">
        Need help signing up?
      </div>
    </div>
    <div class="link"><a target="_blank" href="https://www.google.com/" class="supportLink">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport Support text exists 1`] = `
"<div class="d-flex support-holder align-items-center">
  <div class="image-holder mr-100"><a target="_blank" aria-label="Help" href="https://www.google.com/"><img src="https://via.placeholder.com/200x100" alt="Help Image" width="64" height="64" class="image image-bg-warm"></a></div>
  <div class="text-holder d-flex flex-column">
    <div class="title">
      <div class="h5 mb-25 font-size-base font-weight-bold">
        Need help signing up?
      </div>
    </div>
    <div class="link"><a target="_blank" href="https://www.google.com/" class="supportLink">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport Support title slot exists 1`] = `
"<div class="d-flex support-holder align-items-center">
  <div class="image-holder mr-100"><a target="_blank" aria-label="Help" href="https://www.google.com/"><img src="https://via.placeholder.com/200x100" alt="Help Image" width="64" height="64" class="image image-bg-warm"></a></div>
  <div class="text-holder d-flex flex-column">
    <div class="title">
      <div class="h5 mb-25 font-size-base font-weight-bold">
        Need help signing up?
      </div>
    </div>
    <div class="link"><a target="_blank" href="https://www.google.com/" class="supportLink">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;
